WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273451
REGRESSION (
277958@main
): [ macOS ASan GuardMalloc wk2 ] Multiple css-view-transitions tests are flaky crash
https://bugs.webkit.org/show_bug.cgi?id=273451
Summary
REGRESSION (277958@main): [ macOS ASan GuardMalloc wk2 ] Multiple css-view-tr...
Tim Nguyen (:ntim)
Reported
2024-04-29 16:49:33 PDT
rdar://127258163
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2024-04-29 16:54:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27907
EWS
Comment 2
2024-04-29 19:12:30 PDT
Committed
278144@main
(4329889dd57f): <
https://commits.webkit.org/278144@main
> Reviewed commits have been landed. Closing PR #27907 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug