REGRESSION (277958@main): [ macOS ASan GuardMalloc wk2 ] Multiple css-view-transitions tests are flaky crash https://bugs.webkit.org/show_bug.cgi?id=273451 rdar://127258163

Reviewed by Chris Dumez.

Set `ViewTransition::m_phase` before `document->setActiveViewTransition(nullptr);` is called in `ViewTransition::clearViewTransition()` to prevent UAF.

* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::stop):

Canonical link: https://commits.webkit.org/278144@main